Add Swagger Bear Token Spec
